--- a/roles/hello-world/tasks/main.yml
+++ b/roles/hello-world/tasks/main.yml
@@ -6,3 +6,29 @@
     state: present
     name: nginx
     update_cache: yes
+
+- name: Copy hello-world vhost conf
+  copy:
+    src: hello-world
+    dest: /etc/nginx/sites-available/hello-world
+
+-name: Symlink hello-world in sites-enabled
+  file:
+      state: link
+      src: /etc/nginx/sites-available/hello-world
+      dest: /etc/nginx/sites-enabled/hello-world
+
+
+-name: Create html folder
+  file:
+    state: directory
+    path: /opt/hello-world
+    owner: www-data
+    group: www-data
+
+-name: Render from template index.tml
+  template:
+    src: index.html.j2
+    dest: /opt/hello-world/index.html
+    owner: www-data
+    group: www-data
